react-router-dom v6 with code splitting

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,8 @@
 body {
-    font-family: fantasy
+    font-family: monospace
 }
 
-p {
-    font-size: 2rem;
+a {
+    font-size: 1.2rem;
+    color: coral;
 }
